--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ lerna-debug.log*
 
 .cache
 
+# Video files
+*.mp4
+temp/segments/
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 
 report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
